k8s/client-sustain-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-sustain-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
      - name: client
        image: riliadmin/sustain-indy-foods-client:latest
        ports:
        - containerPort: 8000
