k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
  - port: 8008
    targetPort: 8008
    name: django-admin
  - port: 8009
    targetPort: 8009
    name: django-static
